--- a/Catalogo/Mimaster.Master
+++ b/Catalogo/Mimaster.Master
@@ -29,10 +29,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Favoritos.aspx">Favoritos</a>
-                        </li>
-                 <!--       <li class="nav-item">
-                               <a class="nav-link" href="/MiPerfil.aspx">Mi Perfil</a>
-                        </li>-->
+                        </li>               
                         <li class="nav-item">
                             <%if (Negocio.Seguridad.esAdmin(Session["user"]))
                                 {  %>
@@ -58,6 +55,8 @@
                                     <a href="Login.aspx" class="btn btn-success me-2">Login</a>
                                    <a href="Registrarse.aspx" class="btn btn-outline-primary m-auto">Registrarse</a>
                         <%}%>
+                    <asp:Image ID="imgAvatar" class="ms-2" style="height:40px; width:40px; border-radius:50%;" 
+                        runat="server" />
                     
                 </div>
             </div>
